bugfix: synchronize repository -> layout broke when history too long

--- a/htdocs/css/synchronize-repo.css
+++ b/htdocs/css/synchronize-repo.css
@@ -380,6 +380,8 @@ div.jo_synchro_activeLine.jo_synchro_hoverLine {
 #historyScrollDiv {
     flex: 1;
     width: 100%;
+    overflow: auto;
+    max-height: calc(100vh - 90px);
 }
 
 .jo_synchro_historyElement {
